v.1/mysql-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: epistola
  labels:
    app: mysql
spec:
  type: NodePort
  ports:
    - port: 9002
      targetPort: 3306
      # nodePort: 31345
  selector:
    app: mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-d
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
