v.1/nginx-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: epistola
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
    - port: 9001           # This is the port the service will be available on
      targetPort: 80       # The container port the service will forward to
      nodePort: 31557      # The service will be accessible through this port of each of the cluster nodes
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-d
  namespace: epistola
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-a4p-platform2
        image: nginx
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: nginx.conf
        - name: www-storage
          mountPath: /code
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: www-storage
        persistentVolumeClaim:
          claimName: pv-www-claim
      - name: nginx-config-volume
        configMap:
          name: nginx-config
