v.1/spa-mysql-deploy.yaml
apiVersion: v1
kind: Service
metadata:
  name: spa-mysql-service
  namespace: epistola
  labels:
    app: spa-mysql
spec:
  type: NodePort
  ports:
    - port: 9002
      targetPort: 3306
      nodePort: 31306
  selector:
    app: spa-mysql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spa-mysql-d
  namespace: epistola
  labels:
    app: spa-mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spa-mysql
  template:
    metadata:
      labels:
        app: spa-mysql
    spec:
      containers:
      - image: mysql:8.0
        name: spa-mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim-spa
